# algo3-tp3

./: .travis.yml  CMakeLists.txt  README.md
data/: CMakeLists.txt  DataGenerator.cpp  data.cpp  grafGen.cpp  grafGen.h
informe/: aed2-dis.sty  exact.csv  exacto.tex  informe.tex  situacionReal.tex
informe/data/: Algo3-TP3.ipynb  exact-complete.csv  exact.csv  fit.csv  grasp-complete.csv  greedy.csv  local-nogreedy.csv  local.csv
informe/data/.ipynb_checkpoints/: Algo3-TP3-checkpoint.ipynb
informe/data/accuracy/: Accuracy.ipynb  accuracy-grasp50.csv  accuracy-greedy.csv  accuracy-local.csv
informe/data/accuracy/.ipynb_checkpoints/: Accuracy-checkpoint.ipynb
informe/data/pathological/: Pathological.ipynb  pathological-grasp-2.csv  pathological-grasp.csv  pathological-grasp50.csv  pathological-greedy.csv  pathological-local.csv
informe/data/pathological/.ipynb_checkpoints/: Pathological-checkpoint.ipynb
informe/secciones/: apendice.tex  cambios.tex  comparacion.tex  exacto.tex  grasp.tex  greedy.tex  local.tex  situacionReal.tex
src/: Utils.cpp  Utils.h  clique.h  dataReceptor.cpp  ej1.cpp  ej2.cpp  ej3.cpp  ej4.cpp  exact.cpp  exact.h  graph.cpp  graph.h  grasp.cpp  grasp.h  greedy.cpp  greedy.h  heuristics.cpp  heuristics.h  localsearch.cpp  localsearch.h
test/: AbstractTest.cpp  AbstractTest.h  CMFTest.cpp  CMakeLists.txt  ExactTest.cpp  GraspTest.cpp  GreedyTest.cpp  LocalSearchTest.cpp  tests.cpp
